[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sentinel-path"
version = "0.1.0"
description = "Structural fragility analysis for project dependency graphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.0",
  "numpy>=1.26",
  "pydantic>=2.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
include = [
  "/engine.py",
  "/__init__.py",
  "/core",
  "/models",
  "/stochastic",
  "/math",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
