[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sentinel-path"
version = "0.2.0"
description = "Structural fragility analysis for project dependency graphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.0",
  "numpy>=1.26",
  "pydantic>=2.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
sentinel-path = "sentinel_path.__main__:main"
sentinel-path-schema = "sentinel_path.schema_cli:main"

[tool.hatch.build.targets.wheel]
include = [
  "/engine.py",
  "/__init__.py",
  "/sentinel_path",
  "/core",
  "/models",
  "/stochastic",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
